<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_two_numbers" />

    <EditText
        android:id="@+id/firstInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/input_first_number" />

    <EditText
        android:id="@+id/secondInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/input_second_number" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/result"
        android:layout_width="@dimen/result_width"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/openNewScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_new_screen" />


</LinearLayout>
